policies/db-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-ingress-policy
spec:
  podSelector:
    matchLabels:
      app: phishing-db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: phishing-back

    ports:
    - port: 3306
