policies/frontend-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
  namespace: project
spec:
  podSelector:
    matchLabels:
      app: phishing-front
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: phishing-back
    ports:
    - port: 5000
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx  # Targets the ingress namespace
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller     # Targets the specific controller pod
    ports:
    - protocol: TCP
      port: 80
